--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel1.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel1.tmpl
@@ -15,7 +15,7 @@
                 print C4::AR::Filtros::link_to( text =>     [% nivel1.getId1 %],
                                                 url=>"detalle.pl", 
                                                 params =>   ["id1=[% nivel1.getId1 %]"],
-                                                title =>    "[% 'Editar Registro' | i18n %]"
+                                                title =>    "[% 'Ver Detalle del Registro' | i18n %]"
                                             ) ;
             [% END %]
 
@@ -40,7 +40,7 @@
                                                         button          => 'btn btn-primary',
 
                                                         actions         => [
-                                                                            {title => "Modificar", action=>'modificarN2("[% nivel1.getId1 %]", "[% nivel1.getTemplate %]")',icon=>"icon-edit"},
+                                                                            {title => "Modificar", action=>'modificarN1("[% nivel1.getId1 %]", "[% nivel1.getTemplate %]")',icon=>"icon-edit"},
                                                                             {title => "Eliminar", action=>'borrarN1([% nivel2.getId1 %])', icon=>"icon-trash"},
                                                                             {title => "Agregar Nivel 2", action=>'agregarN2("[% nivel1.getId1 %]")', icon=>"icon-plus-sign"},
                                                                             ],
