opac renovar html

--- a/opac/htdocs/opac-tmpl/opac-DetallePrestamos.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-DetallePrestamos.tmpl
@@ -2,73 +2,83 @@
 [% USE HTML %]
 [% IF cantidad_prestamos %]
 
-    <div class="resultados_consulta">[% "Cantidad de pr&eacute;stamos vigentes:" | i18n %]&nbsp;[% cantidad_prestamos %]</div>
+    <div class="alert alert-info">
+        [% "Cantidad de pr&eacute;stamos vigentes:" | i18n %] <strong> [% cantidad_prestamos %] </strong>
+    </div>
 
     <div class="contenedor_paginador">[% paginador %]</div>
 
+    [% PERL %]
+        print C4::AR::Filtros::tableHeader(   
+                          id              => "tablaPrestamos",
+                          columns         => ['[% "T&iacute;tulo"|i18n %]','[% "Autor"|i18n %]','[% "Edici&oacute;n"|i18n %]',
+                                                '[% "Fecha de Pr&eacute;stamo"|i18n %]', '[% "Fecha de Vencimiento"|i18n %]',
+                                                '[% "Estado"|i18n %]',  '[% "Renovar"|i18n %]',
+                                             ]
 
+                                                            
+                                ) ;
+    [% END %]
 
-    <table id="tablaHistorial" class="tablaHistorial tabla_datos" cellspacing="0" cellpadding="4" style="width:98%; text-align:center; border: 1;">
-        <tr class="tablaResultadoTitulo" >
-            <th>[% "T&iacute;tulo" | i18n %]</th>
-            <th>[% "Autor" | i18n %]</th>
-            <th>[% "Edici&oacute;n" | i18n %]</th>
-            <th>[% "Fecha de Pr&eacute;stamo" | i18n %]</th>
-            <th>[% "Fecha de Vencimiento" | i18n %]</th>
-            <th>&nbsp;</th>
-        </tr>
-        <!-- ESTE LOOP MUESTRA LOS PRESTAMOS -->
-        [% FOREACH prestamo IN prestamos %]
-            <tr>
-              <td> 
-                  [% IF prestamo.nivel3.nivel2.id1 %]
-                      [% PERL %]
-                              print C4::AR::Filtros::link_to( text =>     "[% prestamo.nivel3.nivel2.nivel1.getTitulo %]",
-                                                              url =>      "[% url_prefix %]/opac-detail.pl", 
-                                                              params => [ "id1=[% prestamo.nivel3.nivel2.id1 %]", ],
-                                                          ) ;
-                      [% END %]
+    <tbody>
+    <!-- ESTE LOOP MUESTRA LOS PRESTAMOS -->
+    [% FOREACH prestamo IN prestamos %]
+        <tr>
+        <td> 
+              [% IF prestamo.nivel3.nivel2.id1 %]
+                  [% PERL %]
+                          print C4::AR::Filtros::link_to( text =>     "[% prestamo.nivel3.nivel2.nivel1.getTitulo %]",
+                                                          url =>      "[% url_prefix %]/opac-detail.pl", 
+                                                          params => [ "id1=[% prestamo.nivel3.nivel2.id1 %]", ],
+                                                      ) ;
+                  [% END %]
+              [% ELSE %]
+                  &nbsp;
+              [% END %]
+              </td>
+              <td class="autor_result click" onClick="filtrarPorAutor([% prestamos.nivel3.nivel2.nivel1.cat_autor.id %])" title="[% 'Filtrar por Autor' | i18n %]">
+                  [% IF prestamo.nivel3.nivel1.getAutor %]
+                      [% prestamo.nivel3.nivel1.getAutor %]
                   [% ELSE %]
                       &nbsp;
                   [% END %]
-                  </td>
-                  <td class="autor_result click" onClick="filtrarPorAutor([% prestamos.nivel3.nivel2.nivel1.cat_autor.id %])" title="[% 'Filtrar por Autor' | i18n %]">
-                      [% IF prestamo.nivel3.nivel1.getAutor %]
-                          [% prestamo.nivel3.nivel1.getAutor %]
-                      [% ELSE %]
-                          &nbsp;
-                      [% END %]
-                  </td>
-                  <td>
-                    [% IF prestamo.nivel3.nivel2.getEdicion %] [% prestamo.nivel3.nivel2.getEdicion %] [% ELSE %] - [% END %]                  </td>
-                  <td align=center>
-                      [% prestamo.getFecha_prestamo_formateada %]
-                  </td>
-                  <td align=center>
-                      [% prestamo.getFecha_vencimiento_formateada %]
-                  </td>
+              </td>
+              <td>
+                [% IF prestamo.nivel3.nivel2.getEdicion %] [% prestamo.nivel3.nivel2.getEdicion %] [% ELSE %] - [% END %]                  </td>
+              <td>
+                  [% prestamo.getFecha_prestamo_formateada %]
+              </td>
+              <td>
+                  [% prestamo.getFecha_vencimiento_formateada %]
+              </td>
+              
+              <td>
+                  [% IF prestamo.estaVencido %] <span class="label label-important">Vencido</span> [% ELSE %] 
+                  <span class="label label-success">Vigente</span>[% END %] 
+              </td>
 
-                  <td align=center>
-                  [% IF prestamo.sePuedeRenovar %]
-		    [% PERL %]
-				print C4::AR::Filtros::to_Icon(     text    => "[% 'Renovar' | i18n %]",
-								    boton   => "icon_renovar",                                                            
-								    onClick => "renovar('[% prestamo.getId_prestamo %]');",
-								    title   => "[% 'Renovar' | i18n %]",
-								    alternClass => "botonCentradoTabla"
-					) ;
-		    [% END %]
+              <td>
+              [% IF prestamo.sePuedeRenovar %]
+                [% PERL %]
+                              print C4::AR::Filtros::action_button( 
+                                                              button    => "btn btn-primary click",
+                                                              action    => 'renovar("[% prestamo.getId_prestamo %]")', 
+                                                              icon      => "icon-refresh icon-white",
+                                                          ) ;
+
+
                   [% END %]
-                  </td>
-            </tr>
-        [% END %]
+              [% ELSE %]
+				<i class="icon-ban-circle"></i>
+              [% END %]
+              </td>
+        </tr>
+    [% END %]
 
-    </table>
+</table>
 
 [% ELSE %]
-    <h1> [% 'Ud. no tiene pr&eacute;stamos vigentes.' | i18n %] </h1>
+
+    <div class="alert alert-info"> [% 'Ud. no tiene pr&eacute;stamos vigentes.' | i18n %] </div>
 
 [% END %]
-
-
-
