--- a/opac/htdocs/opac-tmpl/informacion.tmpl
+++ b/opac/htdocs/opac-tmpl/informacion.tmpl
@@ -1,9 +1,11 @@
 [% INCLUDE "opac-top.inc" %] 
 
-<div class='tableMsgUser'>
-    <font class='fontMsgUser'>
-        <b><div id='mensajes'>[% mensaje %]</div></b>
-    </font>
+<div class='alert alert-error'>
+       <h3>[% mensaje %]</h3>
+</div>
+
+<div class="form-actions"> 
+    <a class="btn btn-warning" href="#" onclick="history.back()">[% 'Volver a intentar' | i18n %] </a>
 </div>
 
 [% INCLUDE "opac-bottom.inc" %]
