--- a/intranet/htdocs/intranet-tmpl/estantes/verEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/verEstante.tmpl
@@ -1,39 +1,51 @@
 
-<div id="estante">
-    <fieldset class="resultados_busqueda">
-        <legend class="titulo_legend trigger click">[% "Estantes" | i18n %]</legend>
-            <div class="datos_tabla_div_estantes">
-            
-                  <ul class="unstyled">
-                      [% FOREACH estante IN ESTANTES %]
-                          <li>
-                              <input type=checkbox name="[% estante.getEstante %]" value="[% estante.getId %]">
-                              <a class="click" onClick="verSubEstantes([% estante.getId %],0)">[% estante.getEstante %]</a>
-                          </li>
-                      [% END %]
-                  </ul>
 
-                  <div class="form-actions">
-                        [% IF cant_estantes %]
-                              [% PERL %]
-                                            print C4::AR::Filtros::action_button(
-                                                                                button  => "btn btn-danger",
-                                                                                action => "borrarEstantesSeleccionados(0,0);",
-                                                                                title   => "[% 'Borrar seleccionados' | i18n %]",
-                                                    ) ;
-                              [% END %]
-                        [% END %]
+<div id="estante_collapse" class="accordion">
+   <!-- <fieldset class="resultados_busqueda">-->
+              <div class="accordion-group">
+                    <div class="accordion-heading">
+                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#estante_collapse" href="#contenido_estante">[% "Estantes" | i18n %]</a>
+                    </div>
+                    <div id="contenido_estante" class="accordion-body collapse in">
+                          <div class="accordion-inner">
 
-                        [% PERL %]
-                                            print C4::AR::Filtros::action_button(
-                                                                                button   => "btn btn-primary",
-                                                                                title   => "[% 'Agregar estante' | i18n %]",
-                                                                                action => "agregarNuevoEstante();",
-                                                    ) ;
-                        [% END %]
-                        
-                  </div>
-            </div>
-    </fieldset>
+                               <!-- <legend class="titulo_legend trigger click">[% "Estantes" | i18n %]</legend>-->
+                                    <div class="datos_tabla_div_estantes">
+                                    
+                                          <ul id="ul_tabla_div_estante_0" class="unstyled">
+                                              [% FOREACH estante IN ESTANTES %]
+                                                  <li>
+                                                      <input type=checkbox name="[% estante.getEstante %]" value="[% estante.getId %]">
+                                                      <a class="click" onClick="verSubEstantes([% estante.getId %],0)">[% estante.getEstante %]</a>
+                                                  </li>
+                                              [% END %]
+                                          </ul>
+
+                                          <div class="form-actions">
+                                                
+
+                                                [% PERL %]
+                                                                    print C4::AR::Filtros::action_button(
+                                                                                                        button   => "btn btn-primary",
+                                                                                                        title   => "[% 'Agregar estante' | i18n %]",
+                                                                                                        action => "agregarNuevoEstante();",
+                                                                            ) ;
+                                                [% END %]
+                                                [% IF cant_estantes %]
+                                                      [% PERL %]
+                                                                    print C4::AR::Filtros::action_button(
+                                                                                                        button  => "btn btn-danger",
+                                                                                                        action => "borrarEstantesSeleccionados(0,0);",
+                                                                                                        title   => "[% 'Borrar seleccionados' | i18n %]",
+                                                                            ) ;
+                                                      [% END %]
+                                                [% END %]
+                                                
+                                          </div>
+                                    </div>
+                          </div>
+                    </div>
+        </div>
+<!--    </fieldset>-->
 </div>
 
